app/styles/main.scss
$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
// bower:scss
@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
// endbower
// @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700);

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

body {
  padding: 0;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
  margin-bottom: 10px;

  /* Make the masthead heading the same height as the navigation */
  h3 {
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
    padding-bottom: 19px;
  }
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;

  .btn {
    font-size: 21px;
    padding: 14px 24px;
  }
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;

  p + h4 {
    margin-top: 28px;
  }
}


/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px ) {
  .container {
    max-width: 730px;
  }
  .feed-image {
    max-width: 200px;
    max-height: 200px;
    padding:none;
    border-radius: 1px;
    display: block;
    margin: 0 auto;
  }

  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

@media screen and (max-width: 768) {
  .feed-image {
    max-width: 200px;
    max-height: 200px;
    padding:none;
    border-radius: 1px;
    display: center;
    margin: 0 auto;
  }
}

@media screen and (min-width: 1024px) {
  .container {
    max-width: 1024px;
  }
  .feed-image {
    max-width: 300px;
    max-height: 300px;
    padding:3px;
    border-radius: 5px;
    display: block;
    margin: 0 auto;
  }
}


@media screen and (min-width: 1200px) {
  .container {
    max-width: 1200px;
  }
  .feed-image {
    max-width: 300px;
    max-height: 300px;
    padding:3px;
    border-radius: 5px;
    display: block;
    margin: 0 auto;
  }
}


// .feed-image {
//   max-width: 300px;
//   max-height: 300px;
//   padding:3px;
//   border-radius: 5px;
//   display: block;
//   margin: 0 auto;
// }

// .feed-entry {
//   padding-left: 15px;
//   padding-right: 15px;
//   margin: 40px 0;

//   p + h4 {
//     margin-top: 28px;
//   }
// }


@media screen and (min-width: 768px) and (max-width: 1024px) {
  
  .feed-image {
    max-width: 250px;
    max-height: 250px;
    padding-left:5px;
    border-radius: 5px;
    display: block;
    margin: 0 auto;
  }

  .feed-entry {
    padding-left: 5px;
    padding-right: 5px;
    margin: 40px 0;

    p + h4 {
      margin-top: 28px;
    }
  }

}

@media  screen and (max-width: 768px) {
  .feed-image {
    max-width: 250px;
    max-height: 250px;
    padding-left:5px;
    border-radius: 5px;
    display: block;
    margin-left: auto;
    margin-right: auto;
  }

  .feed-entry {
    padding-left: none;
    padding-right: none;
    margin: 0px 0;

    p + h4 {
      margin-top: 28px;
    }
  }
} 

